# ClawTachie

./: .gitignore  DESIGN.md  PLAN.md  SPEC.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.web.json
.codex/: config.toml
.github/workflows/: release.yml
docs/: release-and-updater.md  release.md
src/: chat.ts  device-identity.ts  gateway-client.ts  index.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: characters.rs  gateway.rs  lib.rs  main.rs  tts.rs  updater.rs
src-ui/: App.tsx  main.tsx  styles.css  tokens.css
src-ui/components/: AssistantMessageContent.module.css  AssistantMessageContent.tsx  CharacterSprite.module.css  CharacterSprite.tsx  ChatView.module.css  ChatView.tsx  Composer.module.css  Composer.tsx  MarkdownRenderer.module.css  MarkdownRenderer.tsx  MessageAttachments.module.css  MessageAttachments.tsx  MessageBubble.module.css  MessageBubble.tsx  SessionList.module.css  SessionList.tsx  SessionTabs.module.css  SessionTabs.tsx  SessionWorkspaceModal.module.css  SessionWorkspaceModal.tsx  SettingsModal.module.css  SettingsModal.tsx  TitleBar.module.css  TitleBar.tsx
src-ui/hooks/: useAutoScroll.ts
src-ui/lib/: chat-attachments.ts  device-identity.ts  emotion.ts  emotions.ts  gateway-client.ts  gateway-errors.ts  message-content.ts  session-display.ts  tauri-gateway.ts  types.ts  window-sync.ts
src-ui/stores/: character.ts  chat.ts  gateway.ts  settings.ts  tts.ts  updater.ts  workspace.ts
src-ui/windows/: MainWindow.module.css  MainWindow.tsx  (+2 more)
